@@ -4,6 +4,8 @@
 	  used to turn it on.  It ratelimits recursion effort per zone.
 	  For particular names you can configure exceptions in unbound.conf.
 	- Fix that get_option for cache-sizes does not print double newline.
+	- Fix#663: ssl handshake fails when using unix socket because dh size
+	  is too small.
 
 8 April 2015: Wouter
 	- Fix crash in dnstap: Do not try to log TCP responses after timeout.
